nginx-demo/nginx-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - nginx.local.cluster
        - nginx.mrmorais.com
      port:
        name: http
        number: 8080
        protocol: HTTP
