nginx-demo/nginx-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
    - '*'
  http:
    - route:
      - destination:
          host: nginx
          subset: v1
